--- a/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
@@ -154,20 +154,18 @@
                                                                         @{
                                                                             int nCounter = 0;
                                                                             string sCounter = "";
-                                                                            string sIdentification = "";
                                                                             foreach (var asset in Model.Assets)
                                                                             {
                                                                                 sCounter = nCounter < 10 ? "0" + nCounter.ToString() : nCounter.ToString();
-                                                                                sIdentification = asset.SubCategory.CategoryId == 16 ? "Plate No: " + asset.Plate : "SN: " + asset.SerialNo;
-                                                                                        <tr>
-                                                                                            <td><a class="btn btn-primary btn-sm" onclick="return selectAsset(@asset.Id,event);">select</a></td>
-                                                                                            <td>@asset.SubCategory.Category.CategoryName</td>
-                                                                                            <td>@asset.Make</td>
-                                                                                            <td>@asset.Model</td>
-                                                                                            <td>@asset.Name</td>
-                                                                                            <td>@sIdentification</td>
-                                                                                            <td>@asset.Barcode</td>
-                                                                                        </tr>
+                                                                                <tr>
+                                                                                    <td><a class="btn btn-primary btn-sm" onclick="return selectAsset(@asset.Id,event);">select</a></td>
+                                                                                    <td>@asset.CategoryName</td>
+                                                                                    <td>@asset.Make</td>
+                                                                                    <td>@asset.Model</td>
+                                                                                    <td>@asset.AssetName</td>
+                                                                                    <td>@asset.Identification</td>
+                                                                                    <td>@asset.Barcode</td>
+                                                                                </tr>
                                                                             }
                                                                         }
                                                                     </tbody>
@@ -211,13 +209,13 @@
                                     </div>
                                     <div class="flex">
                                         @{
-                                            if (Model.Assets == null)
+                                            if (Model.Assets.Count < 1)
                                             {
                                                 sDisabled = "disabled";
                                             }
-                                                    <button type="button" class="btn btn-info-gradient @sDisabled" id="btnSubmit">
-                                                        <i class="fa fa-check-circle"></i>&nbsp;Save Disposal
-                                                    </button>
+                                            <button type="button" class="btn btn-info-gradient @sDisabled" id="btnSubmit">
+                                                <i class="fa fa-check-circle"></i>&nbsp;Save Disposal
+                                            </button>
                                         }
 
                                     </div>
@@ -251,7 +249,7 @@
 <script src="~/assets/plugins/fileuploads/js/fileupload.js"></script>
 <script src="~/assets/plugins/fileuploads/js/file-upload.js"></script>
 
-@section scripts{
+@section scripts {
     <script>
         $(document).ready(() => {
             hideMenu();
@@ -283,25 +281,21 @@
             });
 
         });
-
         const selectAsset = (id, e) => {
             e.preventDefault();
 
-            const assets = @Html.Raw(Json.Serialize(Model.Assets));
-            console.log(assets);
+            const assets = JSON.parse('@Html.Raw(Json.Serialize(Model.Assets))');
             if (assets && assets.length > 0) {
                 const selectedAsset = assets.find(asset => asset.id === id);
 
                 if (selectedAsset) {
                     $("#spnMake").html(selectedAsset.make);
                     $("#spnModel").html(selectedAsset.model);
-                    $("#spnAssetName").html(selectedAsset.name);
+                    $("#spnAssetName").html(selectedAsset.assetName);
 
-                    const categoryName = selectedAsset.subCategory.category.categoryName;
-                    
-                    const isVehicle = categoryName=="Vehicles";
+                    const categoryName = selectedAsset.categoryName;
+                    const identification = selectedAsset.identification;
 
-                    const identification = isVehicle ? "Plate No: " + selectedAsset.plate : "Serial No: " + selectedAsset.serialNo;
                     $("#spnIdentification").html(identification);
                 }
             }
