--- a/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
@@ -40,7 +40,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
                             New Schedule
                         </a>
-                        <div class="table-responsive export-table">
+                        <div class="table-responsive export-table" style="overflow-x: auto; overflow-y: visible;">
                             <table id="tblSchedule" class="table text-nowrap mb-0 table-bordered key-buttons border-top border-bottom project-list-main">
                                 <thead class="bg-primary-gradient ms-auto divShadow">
                                     <tr>
@@ -63,50 +63,50 @@
                                             nCounter++;
                                             sCounter = nCounter < 10 ? "0" + nCounter : nCounter.ToString();
                                             sDisabled = schedule.VerificationStatus != "Pending" ? "disabled" : "";
-                                                <tr>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-2">@sCounter</td>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-20">@schedule.Store.Name</td>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.VerificationType</td>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-30">
-                                                        <div class="avatar-list avatar-list-stacked">
-                                                            @{
-                                                            foreach (var emp in schedule.VerificationTeams)
+                                            <tr>
+                                                <td class="text-black bg-transparent border-bottom-0 w-2">@sCounter</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-20">@schedule.Store.Name</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.VerificationType</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-30">
+                                                    <div class="avatar-list avatar-list-stacked">
+                                                        @foreach (var emp in schedule.VerificationTeams)
+                                                        {
+                                                            if (emp != null)
                                                             {
-                                                                if (emp != null)
-                                                                {
-                                                                    string sContent = $"{emp.Employee.JobTitle} <br /> {emp.Employee.Email}";
-
-                                                                            <a data-bs-container="body"
-                                                                               data-bs-content="@Html.Raw(sContent)"
-                                                                               data-bs-html="true"
-                                                                               data-bs-placement="right"
-                                                                               data-bs-popover-color="default"
-                                                                               data-bs-toggle="popover"
-                                                                               data-bs-original-title="@emp.Employee.FullName"
-                                                                               role="button" tabindex="0" data-bs-trigger="hover">
-                                                                                <span><img src="@emp.Employee.ImageUrl" alt="profile-user" class="avatar bradius cover-image"></span>
-                                                                            </a>
-                                                                }
+                                                                string sContent = $"{emp.Employee.JobTitle} <br /> {emp.Employee.Email}";
+                                                                <a data-bs-container="body"
+                                                                   data-bs-content="@Html.Raw(sContent)"
+                                                                   data-bs-html="true"
+                                                                   data-bs-placement="right"
+                                                                   data-bs-popover-color="default"
+                                                                   data-bs-toggle="popover"
+                                                                   data-bs-original-title="@emp.Employee.FullName"
+                                                                   role="button" tabindex="0" data-bs-trigger="hover">
+                                                                    <span><img src="@emp.Employee.ImageUrl" alt="profile-user" class="avatar bradius cover-image"></span>
+                                                                </a>
                                                             }
-                                                            }
-                                                        </div>
-                                                    </td>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.StartDate.ToString("dd-MMM-yy")</td>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.EndDate.ToString("dd-MMM-yy")</td>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-20">@schedule.VerificationStatus</td>
-                                                    <td class="text-black bg-transparent border-bottom-0 w-5 no-btn">
-                                                        <a asp-controller="Verifications" asp-action="EditSchedule" asp-route-id="@schedule.Id" class="btn btn-sm btn-outline-primary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="Edit Schedule">
-                                                            <i class="fe fe-edit"></i>
-                                                        </a>
-                                                        <a asp-controller="Verifications" asp-action="PreviewSchedule" asp-route-id="@schedule.Id" class="btn btn-sm btn-outline-info border me-2" data-bs-toggle="tooltip" data-bs-original-title="Preview Schedule">
-                                                            <i class="fe fe-eye"></i>
-                                                        </a>
-                                                        <a asp-controller="Verifications" asp-action="DeleteSchedule" asp-route-id="@schedule.Id" class="btn btn-sm btn-outline-danger border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="Delete Schedule">
-                                                            <i class="fe fe-trash"></i>
-                                                        </a>
-                                                    
-                                                    </td>
-                                                </tr>
+                                                        }
+                                                    </div>
+                                                </td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.StartDate.ToString("dd-MMM-yy")</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-10">@schedule.EndDate.ToString("dd-MMM-yy")</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-20">@schedule.VerificationStatus</td>
+                                                <td class="text-black bg-transparent border-bottom-0 w-5 no-btn" style="position: relative;">
+                                                    <a asp-controller="Verifications" asp-action="EditSchedule" asp-route-id="@schedule.Id" class="btn btn-sm btn-outline-primary border me-2 @sDisabled" data-bs-toggle="tooltip" data-bs-original-title="Edit Schedule">
+                                                        <i class="fe fe-edit"></i>
+                                                    </a>
+                                                    <a asp-controller="Verifications" asp-action="PreviewSchedule" asp-route-id="@schedule.Id" class="btn btn-sm btn-outline-info border me-2" data-bs-toggle="tooltip" data-bs-original-title="Preview Schedule">
+                                                        <i class="fe fe-eye"></i>
+                                                    </a>
+                                                    <button type="button"
+                                                            class="btn btn-sm btn-outline-secondary border me-2"
+                                                            data-bs-toggle="modal"
+                                                            data-bs-target="#deleteConfirmationModal"
+                                                            onclick="setDeleteUrl('@schedule.Id')">
+                                                        <i class="fe fe-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
                                         }
                                     }
                                 </tbody>
@@ -130,6 +130,27 @@
                     </div>
                 </div>
             </div>
+
+            <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title text-danger" id="deleteConfirmationModalLabel">Confirm Deletion</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete? This action cannot be undone.
+                        </div>
+                        <div class="modal-footer">
+                            <a id="confirmDeleteLink" href="#" class="btn btn-danger">
+                                <i class="fe fe-trash"></i> Delete
+                            </a>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
@@ -144,16 +165,16 @@
         });
 
         const loadMetricsChart = () => {
-            
+
             var chartData = JSON.parse('@Html.Raw(Json.Serialize(Model.GetBarChartData()))');
-            
+
             var statusLabels = chartData.map(item => item.scheduleStatus);
             var scheduleCounts = chartData.map(item => item.scheduleCount);
-            
+
             var barColors = ['#73C9E6', '#FF7F50', '#87CEEB'];
 
             var chart = echarts.init(document.getElementById('verificationBarChart'));
-            
+
             var chartOptions = {
                 grid: {
                     top: 30,
@@ -198,6 +219,10 @@
                 ]
             };
             chart.setOption(chartOptions);
+        }
+
+        const setDeleteUrl = (scheduleId) => {
+            document.getElementById('confirmDeleteLink').href = `/Users/Verifications/DeleteSchedule/${scheduleId}`;
         }
 
     </script>
