--- a/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
@@ -1,3 +1,8 @@
+﻿@using System.Globalization
+@{
+    var currentCulture = CultureInfo.CurrentUICulture.Name; // "en" or "so"
+}
+
 <style>
     #dvNotifications {
         width: 500px; /* Change this value to the desired width */
@@ -18,7 +23,29 @@
         align-items: center; /* Align items vertically within the container */
     }
 </style>
-               <!-- app-Header -->
+<style>
+    .btn-no-bg {
+        background-color: transparent;
+        border: none;
+        box-shadow: none;
+        padding: 0;
+    }
+
+        .btn-no-bg:focus,
+        .btn-no-bg:hover {
+            background-color: transparent;
+            border: none;
+            box-shadow: none;
+        }
+
+    .language {
+        width: 20px;
+        height: 14px;
+        object-fit: cover;
+        margin-right: 6px;
+    }
+</style>
+<!-- app-Header -->
 
 <div class="app-header header sticky">
     <div class="container-fluid main-container">
@@ -33,7 +60,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M21.2529297,17.6464844l-2.8994141-2.8994141c-0.0021973-0.0021973-0.0043945-0.0043945-0.0065918-0.0065918c-0.8752441-0.8721313-2.2249146-0.9760132-3.2143555-0.3148804l-0.8467407-0.8467407c1.0981445-1.2668457,1.7143555-2.887146,1.715332-4.5747681c0.0021973-3.8643799-3.1286621-6.9989014-6.993042-7.0011597S2.0092773,5.1315308,2.007019,8.9959106S5.1356201,15.994812,9,15.9970703c1.6889038,0.0029907,3.3114014-0.6120605,4.5789185-1.7111206l0.84729,0.84729c-0.6630859,0.9924316-0.5566406,2.3459473,0.3208618,3.2202759l2.8994141,2.8994141c0.4780884,0.4786987,1.1271973,0.7471313,1.8037109,0.7460938c0.6766357,0.0001831,1.3256226-0.2686768,1.803894-0.7472534C22.2493286,20.2558594,22.2488403,18.6417236,21.2529297,17.6464844z M9.0084229,14.9970703c-3.3120728,0.0023193-5.9989624-2.6807861-6.0012817-5.9928589S5.6879272,3.005249,9,3.0029297c1.5910034-0.0026855,3.1175537,0.628479,4.2421875,1.7539062c1.1252441,1.1238403,1.7579956,2.6486206,1.7590942,4.2389526C15.0036011,12.3078613,12.3204956,14.994751,9.0084229,14.9970703z M20.5458984,20.5413818c-0.604126,0.6066284-1.5856934,0.6087036-2.1923828,0.0045166l-2.8994141-2.8994141c-0.2913818-0.2910156-0.4549561-0.6861572-0.4544678-1.0979614C15.0006714,15.6928101,15.6951294,15,16.5507812,15.0009766c0.4109497-0.0005493,0.8051758,0.1624756,1.0957031,0.453125l2.8994141,2.8994141C21.1482544,18.9584351,21.1482544,19.9364624,20.5458984,20.5413818z" /></svg>
                 </button>
             </div>
-            
+
             <div class="d-flex order-lg-2 ms-auto header-right-icons">
                 <div class="dropdown d-xl-none d-md-block d-none">
                     <a href="#" class="nav-link icon" data-bs-toggle="dropdown">
@@ -58,6 +85,33 @@
                 <div class="navbar navbar-collapse responsive-navbar p-0">
                     <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
                         <div class="d-flex order-lg-2">
+                            <div class="dropdown">
+                                <button class="btn btn-no-bg dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                    @if (currentCulture == "so")
+                                    {
+                                        <img class="language" src="/assets/images/flags/so.svg" alt="Somali Flag" />
+                                    }
+                                    else
+                                    {
+                                        <img class="language" src="/assets/images/flags/us.svg" alt="English Flag" />
+                                    }
+                                </button>
+                                @{
+                                    var fullUrl = Context.Request.Path + Context.Request.QueryString;
+                                }
+                                <ul class="dropdown-menu" aria-labelledby="languageDropdown">
+                                    <li>
+                                        <a class="dropdown-item" href="Users/Language/SetLanguage?culture=en&returnUrl=@fullUrl">
+                                            <img class="header-icons language" src="/assets/images/flags/us.svg" alt="English Flag" /> English
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="Users/Language/SetLanguage?culture=so&returnUrl=@fullUrl">
+                                            <img class="header-icons language" src="/assets/images/flags/so.svg" alt="Somali Flag" /> Somali
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="dropdown  d-flex">
                                 <a class="nav-link icon theme-layout nav-link-bg layout-setting">
                                     <span class="dark-layout">
@@ -191,7 +245,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M18,14.1V10c0-3.1-2.4-5.7-5.5-6V2.5C12.5,2.2,12.3,2,12,2s-0.5,0.2-0.5,0.5V4C8.4,4.3,6,6.9,6,10v4.1c-1.1,0.2-2,1.2-2,2.4v2C4,18.8,4.2,19,4.5,19h3.7c0.5,1.7,2,3,3.8,3c1.8,0,3.4-1.3,3.8-3h3.7c0.3,0,0.5-0.2,0.5-0.5v-2C20,15.3,19.1,14.3,18,14.1z M7,10c0-2.8,2.2-5,5-5s5,2.2,5,5v4H7V10z M13,20.8c-1.6,0.5-3.3-0.3-3.8-1.8h5.6C14.5,19.9,13.8,20.5,13,20.8z M19,18H5v-1.5C5,15.7,5.7,15,6.5,15h11c0.8,0,1.5,0.7,1.5,1.5V18z"></path></svg>
                                     <span id="notification-pulse" class="pulse"></span>
                                 </a>
-                                    <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                                <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                                     <div class="drop-heading border-bottom">
                                         <div class="d-flex">
                                             <h6 class="mt-1 mb-0 fs-15 text-dark">Notifications</h6>
@@ -201,7 +255,6 @@
                                         </div>
                                     </div>
                                     <div class="notifications-menu ps3 overflow-hidden ps" id="dvNotifications">
-                                        
                                     </div>
                                     <div class="dropdown-divider m-0"></div>
                                     <div class="text-center p-3">
